<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.agnt45.sapianscompute.LoginActivity">

    <TextView
        android:id="@+id/LoginText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/please_enter_email_and_password_to_login"
        android:textColor="@color/colorPrimary"
        android:textSize="18dp"
        android:layout_marginTop="76dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="337dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/LoginText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        tools:layout_editor_absoluteY="205dp"
        tools:layout_editor_absoluteX="-134dp"
        android:id="@+id/emailInput">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="337dp"
        android:layout_height="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="8dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/emailInput"
        app:layout_constraintHorizontal_bias="0.516"
        android:id="@+id/passwordInput">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/FPASS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.09"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="16dp" />

    <TextView
        android:id="@+id/SignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_user_sign_in"
        app:layout_constraintStart_toEndOf="@+id/FPASS"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.09"
        android:textColor="@color/colorPrimary"
        android:layout_marginLeft="28dp" />

    <Button
        android:id="@+id/LoginButton"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="188dp"
        android:layout_marginEnd="20dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="20dp"

        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorAccent"
        android:text="@string/log_in"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.992"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
        app:layout_constraintVertical_bias="1.0" />

</android.support.constraint.ConstraintLayout>
